--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
 
           <div class="flex-1">
-            <img src="/images//slider/bike1.png" class="w-[400px]" />
+            <img src="./images//slider/bike1.png" class="w-[400px]" />
           </div>
         </div>
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -127,7 +127,7 @@
           </div>
 
           <div class="flex-1">
-            <img src="/images//slider/bike2.png" class="w-[400px]" />
+            <img src="./images//slider/bike2.png" class="w-[400px]" />
           </div>
         </div>
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -152,7 +152,7 @@
           </div>
 
           <div class="flex-1">
-            <img src="/images//slider/bike3.png" class="w-[400px]" />
+            <img src="./images//slider/bike3.png" class="w-[400px]" />
           </div>
         </div>
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -177,7 +177,7 @@
           </div>
 
           <div class="flex-1">
-            <img src="/images//slider/bike4.png" class="w-[400px]" />
+            <img src="./images//slider/bike4.png" class="w-[400px]" />
           </div>
         </div>
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -316,7 +316,7 @@
 
       <div class="hero">
         <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-          <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+          <img src="./images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
           <div>
             <div class="collapse collapse-arrow">
               <input type="radio" name="my-accordion-3" checked="checked" /> 
