--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
         <!-- first card -->
         <div class="card  bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -213,7 +213,7 @@
 
          <!-- second card -->
          <div class="card  bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title text-2xl">Motorcycles & Scooters</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -225,7 +225,7 @@
 
         <!-- third card -->
         <div class="card  bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title text-2xl">2021 Honda CBR500R</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -244,7 +244,7 @@
       <div class="grid gap-11  grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
         <!-- first review -->
         <div class="card  bg-base-100 p-9 border border-gray-200">
-          <figure><img class="w-36" src="/images//others/user-1.png" alt="Shoes" /></figure>
+          <figure><img class="w-36" src="./images//others/user-1.png" alt="Shoes" /></figure>
           <div class="card-body">  
             <p>Slate helps you see how 
               many more days you need 
@@ -266,7 +266,7 @@
 
          <!-- second review -->
          <div class="card  bg-base-100 p-9 border border-gray-200">
-          <figure><img class="w-36" src="/images//others/user-2.png" alt="Shoes" /></figure>
+          <figure><img class="w-36" src="./images//others/user-2.png" alt="Shoes" /></figure>
           <div class="card-body">  
             <p>Slate helps you see how 
               many more days you need 
@@ -287,7 +287,7 @@
         </div>
          <!-- third review -->
          <div class="card  bg-base-100 p-9 border border-gray-200">
-          <figure><img class="w-36" src="/images//others/user-3.png" alt="Shoes" /></figure>
+          <figure><img class="w-36" src="./images//others/user-3.png" alt="Shoes" /></figure>
           <div class="card-body">  
             <p>Slate helps you see how 
               many more days you need 
